@@ -8,12 +8,15 @@ import com.crowndine.exception.InvalidDataException;
 import com.crowndine.exception.ResourceNotFoundException;
 import com.crowndine.model.Combo;
 import com.crowndine.model.ComboItem;
+import com.crowndine.model.Category;
 import com.crowndine.model.Item;
+import com.crowndine.repository.CategoryRepository;
 import com.crowndine.repository.ComboItemRepository;
 import com.crowndine.repository.ComboRepository;
 import com.crowndine.repository.ItemRepository;
 import com.crowndine.repository.FeedbackRepository;
 import com.crowndine.service.combo.ComboService;
+import com.github.slugify.Slugify;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
@@ -21,12 +24,10 @@ import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.text.Normalizer;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Locale;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,19 +35,22 @@ public class ComboServiceImpl implements ComboService {
     private static final String COMBOS_CACHE = "combos";
     private static final String COMBO_BY_ID_CACHE = "combo-by-id";
     private static final String COMBO_BY_NAME_CACHE = "combo-by-name";
+    private static final String COMBO_BY_SLUG_CACHE = "combo-by-slug";
     private static final String TOP_SELLING_COMBOS_CACHE = "top-selling-combos";
 
     private final ComboRepository comboRepository;
     private final ComboItemRepository comboItemRepository;
     private final ItemRepository itemRepository;
+    private final CategoryRepository categoryRepository;
     private final FeedbackRepository feedbackRepository;
+    private final Slugify slugify = Slugify.builder().build();
 
     @Override
     @Cacheable(COMBOS_CACHE)
     public List<ComboResponse> getAllCombos() {
         return comboRepository.findAll()
                 .stream().map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -59,7 +63,7 @@ public class ComboServiceImpl implements ComboService {
                 .sorted(Comparator.comparing(Combo::getSoldCount).reversed())
                 .limit(normalizedLimit)
                 .map(this::mapToTopSellingResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -79,17 +83,28 @@ public class ComboServiceImpl implements ComboService {
     }
 
     @Override
+    @Cacheable(value = COMBO_BY_SLUG_CACHE, key = "#slug")
+    public ComboResponse getComboBySlug(String slug) {
+        Combo combo = comboRepository.findBySlug(slug)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy combo với slug: " + slug));
+        return mapToResponse(combo);
+    }
+
+    @Override
     @Transactional
     @Caching(evict = {
             @CacheEvict(value = COMBOS_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_ID_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_NAME_CACHE, allEntries = true),
+            @CacheEvict(value = COMBO_BY_SLUG_CACHE, allEntries = true),
             @CacheEvict(value = TOP_SELLING_COMBOS_CACHE, allEntries = true)
     })
     public ComboResponse createCombo(ComboRequest req) {
         if (comboRepository.findByName(req.getName()).isPresent()) {
             throw new InvalidDataException("Tên combo đã tồn tại");
         }
+        Category category = categoryRepository.findById(req.getCategoryId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy category với id: " + req.getCategoryId()));
 
         Combo combo = new Combo();
         combo.setName(req.getName());
@@ -98,7 +113,8 @@ public class ComboServiceImpl implements ComboService {
         combo.setPriceAfterDiscount(req.getPriceAfterDiscount());
         combo.setImageUrl(req.getImageUrl());
         combo.setStatus(req.getStatus() != null ? req.getStatus() : com.crowndine.common.enums.EComboStatus.AVAILABLE);
-        combo.setSlug(toSlug(req.getName()));
+        combo.setSlug(slugify.slugify(req.getName()));
+        combo.setCategory(category);
         combo.setSoldCount(0L);
 
         // Save combo first to get ID
@@ -116,7 +132,7 @@ public class ComboServiceImpl implements ComboService {
                 ci.setItem(item);
                 ci.setQuantity(ciReq.getQuantity());
                 return ci;
-            }).toList();
+            }).collect(Collectors.toList());
             comboItemRepository.saveAll(comboItems);
         }
 
@@ -130,11 +146,14 @@ public class ComboServiceImpl implements ComboService {
             @CacheEvict(value = COMBOS_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_ID_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_NAME_CACHE, allEntries = true),
+            @CacheEvict(value = COMBO_BY_SLUG_CACHE, allEntries = true),
             @CacheEvict(value = TOP_SELLING_COMBOS_CACHE, allEntries = true)
     })
     public ComboResponse updateCombo(Long id, ComboRequest req) {
         Combo combo = comboRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy combo với id: " + id));
+        Category category = categoryRepository.findById(req.getCategoryId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy category với id: " + req.getCategoryId()));
 
         combo.setName(req.getName());
         combo.setDescription(req.getDescription());
@@ -144,7 +163,8 @@ public class ComboServiceImpl implements ComboService {
         if (req.getStatus() != null) {
             combo.setStatus(req.getStatus());
         }
-        combo.setSlug(toSlug(req.getName()));
+        combo.setSlug(slugify.slugify(req.getName()));
+        combo.setCategory(category);
 
         // ✅ Không replace list
         if (combo.getComboItems() == null) {
@@ -178,6 +198,7 @@ public class ComboServiceImpl implements ComboService {
             @CacheEvict(value = COMBOS_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_ID_CACHE, allEntries = true),
             @CacheEvict(value = COMBO_BY_NAME_CACHE, allEntries = true),
+            @CacheEvict(value = COMBO_BY_SLUG_CACHE, allEntries = true),
             @CacheEvict(value = TOP_SELLING_COMBOS_CACHE, allEntries = true)
     })
     public void deleteCombo(Long id) {
@@ -192,16 +213,18 @@ public class ComboServiceImpl implements ComboService {
         List<ComboItemResponse> items = (combo.getComboItems() == null) ? new ArrayList<>()
                 : combo.getComboItems().stream()
                         .map(this::mapComboItemToResponse)
-                        .toList();
+                        .collect(Collectors.toList());
 
         return ComboResponse.builder()
                 .id(combo.getId())
                 .name(combo.getName())
+                .slug(combo.getSlug())
                 .description(combo.getDescription())
                 .price(combo.getPrice())
                 .priceAfterDiscount(combo.getPriceAfterDiscount())
                 .status(combo.getStatus())
                 .imageUrl(combo.getImageUrl())
+                .categoryId(combo.getCategory() != null ? combo.getCategory().getId() : null)
                 .averageRating(feedbackRepository.getAverageRatingByComboId(combo.getId()))
                 .feedbackCount((int) feedbackRepository.countByCombo_Id(combo.getId()))
                 .items(items)
@@ -232,13 +255,4 @@ public class ComboServiceImpl implements ComboService {
         return Math.min(limit, 10);
     }
 
-    // Simple Slug generation
-    private String toSlug(String input) {
-        if (input == null)
-            return "";
-        String nowhitespace = Pattern.compile("[\\s]").matcher(input).replaceAll("-");
-        String normalized = Normalizer.normalize(nowhitespace, Normalizer.Form.NFD);
-        String slug = Pattern.compile("[^\\w-]").matcher(normalized).replaceAll("");
-        return slug.toLowerCase(Locale.ENGLISH);
-    }
 }
